--- a/css/main.css
+++ b/css/main.css
@@ -2,16 +2,15 @@ html,body{
 	height:100%;
 }
 #wrap{
-	width: 100%;
-	position: relative;
 	min-height: 100%;
+	height: auto !important;
+	height: 100%;
+	/* Negative indent footer by it's height */
+	margin: 0 auto -110px;
 }
+#push,
 #footer{
-	padding-left: 20px;
-	height:100px;
-	width: 100%;
-	position:absolute;
-	bottom:0;
+	height: 110px;
 }
 
 #mylist{
