--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,41 @@
 html,body{
-	height:100%;
+  height:100%;
 }
 #wrap{
-	min-height: 100%;
-	height: auto !important;
-	height: 100%;
-	/* Negative indent footer by it's height */
-	margin: 0 auto -110px;
+  min-height: 100%;
+  height: auto !important;
+  height: 100%;
+  /* Negative indent footer by it's height */
+  margin: 0 auto -110px;
 }
 #push,
 #footer{
-	height: 110px;
+  height: 110px;
 }
 
 #mylist{
-	float: left;
-	width: 100%;
-	margin-right: -180px;
+  width: 60%;
+  float: left;
 }
 
 #otherlist{
-	width: 180px;
-	float: right;
+  width: 30%;
+  float: right;
+}
+
+.multiple-lines ul{
+  list-style: none;
+}
+
+#do-list{
+  float: left;
+  width: 48%;
+  margin: 0 1%;
+  margin-bottom: 10px;
+}
+#done-list{
+  float: left;
+  width: 48%;
+  margin: 0 1%;
+  margin-bottom: 10px;
 }
